# Great_Quotes_Django

./: pyproject.toml
greatquotes/: manage.py
greatquotes/greatquotes/: asgi.py  settings.py  urls.py  wsgi.py
